--- a/src/public/style.css
+++ b/src/public/style.css
@@ -2,6 +2,7 @@ body {
     font-family: chaparral-pro, sans-serif;
     color: #000000;
     background: #ffffff;
+    height: 100%;
 }
 
 a {
@@ -73,4 +74,11 @@ table.strikes tr.error {
 .score-history {
     width: 500px;
     height: 120px;
+}
+
+#current-overall-scores {
+	position: absolute;
+	width: 95%;
+	height: 80%;
+	margin: 20px;
 }
