--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,8 +1,13 @@
 body {
-    font-family: chaparral-pro, sans-serif;
+    font: 100%/1.5 "Helvetica Neue",Arial,Helvetica,sans-serif;
     color: #000000;
     background: #ffffff;
     height: 100%;
+    margin: 0;
+    border-top: 8px solid rgb(102, 102, 102);
+    padding-bottom: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 a {
@@ -28,6 +33,24 @@ a:active {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
     color: #F59C00;
+}
+
+footer {
+	background: rgb(102, 102, 102);
+	color: white;
+	font-size: 0.8em;
+	padding-top: 12px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	margin-left: -20px;
+	margin-right: -20px;
+}
+
+footer img {
+	margin-left: 20px;
+	margin-top: 4px;
 }
 
 table.strikes {
@@ -67,7 +90,7 @@ table.strikes tr.error {
 
 .navigation {
     position: absolute;
-    top: 1em;
+    top: 60px;
     right: 1em;
 }
 
@@ -79,6 +102,6 @@ table.strikes tr.error {
 #current-overall-scores {
 	position: absolute;
 	width: 95%;
-	height: 80%;
+	height: 70%;
 	margin: 20px;
 }
