--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,13 +1,30 @@
+* {
+    margin: 0;
+}
+
 body {
     font: 100%/1.5 "Helvetica Neue",Arial,Helvetica,sans-serif;
+    height: 100%;
     color: #000000;
     background: #ffffff;
-    height: 100%;
     margin: 0;
-    border-top: 8px solid rgb(102, 102, 102);
-    padding-bottom: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0;
+}
+
+.decorative-border {
+	height: 8px;
+	background-color: rgb(102, 102, 102);
+	margin: 0px;
+	margin-left: -20px;
+    margin-right: -20px;
+	padding: 0px;
+	border: 0px;
+}
+
+html {
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
 a {
@@ -33,6 +50,27 @@ a:active {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
     color: #F59C00;
+    font-family: "PT Sans Narrow","Arial Narrow",sans-serif;
+    font-weight: 700;
+}
+
+h1 {
+	color: #000000;
+	font-size: 2.625em;
+	margin-top: 0px;
+}
+
+section {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin-bottom: -72px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.push {
+	height: 90px;
 }
 
 footer {
@@ -40,12 +78,8 @@ footer {
 	color: white;
 	font-size: 0.8em;
 	padding-top: 12px;
-	position: absolute;
-	bottom: 0;
 	width: 100%;
 	height: 60px;
-	margin-left: -20px;
-	margin-right: -20px;
 }
 
 footer img {
@@ -104,4 +138,5 @@ table.strikes tr.error {
 	width: 95%;
 	height: 70%;
 	margin: 20px;
+	margin-bottom: 60px;
 }
