Fixed white text on white background

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -101,7 +101,7 @@ table.strikes th, td {
 }
 
 table.strikes th {
-    color: white;
+    font-family: "PT Sans Narrow","Arial Narrow",sans-serif;
 }
 
 table.strikes td {
