--- a/src/public/style.css
+++ b/src/public/style.css
@@ -60,6 +60,12 @@ h1 {
     margin-top: 0px;
 }
 
+#error-message {
+    color: #FF0000;
+    font-weight: 700;
+    margin: 1.5em;
+}
+
 section {
     min-height: 100%;
     height: auto !important;
